# cpuvisor-srv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  config.prototxt  config.prototxt.vggcaffe  download_data.py  dsetpaths.txt  legacy_serve.py  negpaths.txt  requirements.txt  test_client.py  test_client_proto.py  test_legacy_wrap.py  test_pospaths.txt  train_pospaths.txt
aux/cmake/: FindCUDAHeaders.cmake  FindCaffe.cmake  FindGFLAGS.cmake  FindGLOG.cmake  FindLiblinear.cmake  FindMATIO.cmake  FindProtobuf.cmake  FindZeroMQ.cmake
pyclient/: __init__.py  decorators.py  visor_client.py  visor_legacy_wrap.py  visor_notifier.py
src/: CMakeLists.txt  cpuvisor_add_dset_images.cc  cpuvisor_combine_chunks.cc  cpuvisor_genconfig.cc  cpuvisor_inspect_feats.cc  cpuvisor_netlib.cc  cpuvisor_preproc.cc  cpuvisor_preproc_sge.cc  cpuvisor_service.cc  cpuvisor_testimg.cc  cpuvisor_timeit.cc
src/classification/svm/: generic_svm.h  liblinear.cc  liblinear.h
src/directencode/: CMakeLists.txt  augmentation_helper.cc  augmentation_helper.h  caffe_config.h  caffe_encoder.cc  caffe_encoder.h  caffe_encoder_utils.cc  caffe_encoder_utils.h  generic_direct_encoder.h
src/directencode/netpool/: caffe_netinst.cc  caffe_netinst.h  caffe_netpool.cc  caffe_netpool.h
src/proto/: CMakeLists.txt  cpuvisor.proto  cpuvisor_config.proto  cpuvisor_srv.proto  visor_common.proto  visor_config.proto  visor_srv.proto
src/server/: base_server.cc  base_server.h  query_data.h  zmq_client.cc  zmq_client.h  zmq_server.cc  zmq_server.h
src/server/common/: CMakeLists.txt  common.h  generic_zmq_server.cc  generic_zmq_server.h  proto_parse.cc  proto_parse.h  server_errors.h
src/server/cpuvisor/: base_server.h  query_data.h  status_notifier.cc  status_notifier.h  zmq_server.h
src/server/util/: concurrent_queue.h  concurrent_queue_single_sub.h  feat_util.cc  feat_util.h  file_util.cc  file_util.h  image_downloader.cc  image_downloader.h  io.cc  io.h  preproc.cc  preproc.h  status_notifier.cc  status_notifier.h  tictoc.h  uber_classifiers.cc  uber_classifiers.h
src/server/util/debug/: matfileutils.cc  matfileutils.h  matfileutils_cpp.cc  matfileutils_cpp.h
src/test/: CMakeLists.txt  test.cc
src/test/test_sets/: feats.inl
test_data/input/: gen_matlab_datafiles.m  mlab_input_im.txt  mlab_input_im_vggcaffe_rgb.txt  mlab_output_feat.txt  testimg_test_negpaths_voc07.txt  testimg_train_negpaths_voc07.txt
utils/: cpuvisor_service_forever.sh  generate_imagelist.py  start_service.sh  stop_service.sh
webservice/: .bowerrc  README.md  bower.json  requirements.txt  server.py
webservice-node/: README.md  client
webservice-node/client/app/: index.html
webservice-node/client/app/css/less/: _global.less  _mixins.less  main.less
webservice-node/client/app/js/: .gitignore  test.coffee
webservice-node/client/app/js/tmp/: hello.coffee
webservice-node/server/: boot.coffee  package.json  server.coffee
webservice-node/server/apps/: index.coffee
webservice-node/server/apps/api/: index.coffee
webservice-node/server/apps/web/: index.coffee
webservice-node/server/config/: index.coffee  s3.json
webservice-node/server/lib/: utils.coffee
webservice-node/server/nodeclient/: google-searcher.coffee  visor-client-loadprotoconfig.coffee  visor-client.coffee  visor-notifier.coffee
webservice-node/server/views/: index.ejs
webservice/static/app/: downloaded  dsetimages  index.html
webservice/static/app/css/: angular-strap.css  directives.css  main.css
webservice/static/app/js/: app.js  controllers.js  directives.js  services.js
webservice/static/app/partials/: landing.html  ranking.html
webservice/static/app/templates/: rankingImage.html
